...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_recipe_image"
...
                        tools:layout_conversion_absoluteHeight="27dp"
                        tools:layout_conversion_absoluteWidth="411dp"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="417dp" />

                    <ImageButton
                        android:id="@+id/imageButton_favourite"
                        android:layout_marginTop="10dp"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        app:srcCompat="@drawable/ic_favorite_white_24dp" />
...
