<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="favouriteViewModel"
            type="de.psekochbuch.exzellenzkoch.userinterfacelayer.viewmodel.FavouriteViewmodel" />

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="10dp"
            android:id="@+id/recyclerView_favourites" />
    </LinearLayout>
</layout>